[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "procdbtools"
version = "0.0.1"
authors = [
  { name="L. Lamarche", email="leslie.lamarche@sri.com" },
]
description = "Tools for walking and quering the processed AMISR database."
readme = "README.rst"
license = { file = "LICENSE" }
keywords = ["AMISR", "data"]
requires-python = ">=3.7"
#dependencies = [
#    "numpy",
#    "h5py",
#    "pymap3d",
#    "apexpy",
#    "pyyaml",
#    "importlib_resources",
#]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Operating System :: OS Independent",
]

#[project.urls]
#"Homepage" = "https://github.com/amisr/amisrsynthdata"
#"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

#[project.scripts]
#    amisrsynthdata = "amisrsynthdata.syntheticdata:main"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
addopts = [
    "--import-mode=importlib",
]
