[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "procdbtools"
version = "0.0.1"
authors = [
  { name="L. Lamarche", email="leslie.lamarche@sri.com" },
]
description = "Tools for walking and quering the processed AMISR database."
readme = "README.rst"
license = { file = "LICENSE" }
keywords = ["AMISR", "data"]
requires-python = ">=3.7"
dependencies = ["sqlalchemy"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/amisr/procdbtools"
"Bug Tracker" = "https://github.com/amisr/procdbtools/issues"

[project.scripts]
    amisrdbquery = "procdbtools.command_line_tools:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
addopts = [
    "--import-mode=importlib",
]
